grammar.txt
expression	: KEYWORD: VAR IDENTIFIER EQ expression
			: term ((PLUS | MINUS) term)*

term : factor ((MUL |DIV) factor)*

factor	: (PLUS | MINUS) factor
		: power

power	: atom (POW factor)*

atom	: INT |FLOAT | IDENTIFIER
		: LPAREN expression RPAREN
